# wampirzce

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
.github/workflows/: main.yml
src/: Makefile.am  Makefile.in  kolonia.C  kolonia.h  main.C  polozenie.C  polozenie.h  wampirzec.C  wampirzec.h
